force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_Operator__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Operator__c</fullName>
    <formula>null</formula>
    <label>Z_Unused_2203 {Operator}</label>
    <type>Text</type>
</CustomField>