force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_Type_Of_Event__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Type_Of_Event__c</fullName>
    <formula>TEXT( leaseworks__Type_Of_Event__c )</formula>
    <label>_Type Of Event</label>
    <type>Text</type>
</CustomField>