force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/leaseworks__Y_Hidden_Variant__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Variant__c</fullName>
    <description>Used in the email template</description>
    <formula>TEXT(leaseworks__Asset_Variant_GP__c )</formula>
    <label>_Variant</label>
    <type>Text</type>
</CustomField>