force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/pro_Il_Asset_Count__c.field-meta.xml
<CustomField>
    <fullName>pro_Il_Asset_Count__c</fullName>
    <label>Il Asset Count</label>
    <summaryForeignKey>IL_Assets__c.Interaction_Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>