force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/pro_Related_To_Account__c.field-meta.xml
<CustomField>
    <fullName>pro_Related_To_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related To Account</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You Can Only Select Accounts of &quot;Type&quot; that are not equal to Parties or Carlyle Entity</errorMessage>
        <filterItems>
            <field>Account.Type</field>
            <operation>notEqual</operation>
            <value>Parties, Carlyle Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Interaction Logs (Related To Account)</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>