force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/fields/Related_To_Claim__c.field-meta.xml
<CustomField>
    <fullName>Related_To_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related To Claim</label>
    <referenceTo>leaseworks__Claims__c</referenceTo>
    <relationshipLabel>Interaction Logs</relationshipLabel>
    <relationshipName>Interaction_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>