force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/validationRules/leaseworks__AssignedToRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__AssignedToRule</fullName>
    <active>true</active>
    <description>Assigned To field is mandatory if there is a follow up Action being added</description>
    <errorConditionFormula>AND(!ISBLANK(leaseworks__Follow_Up_Action__c),ISBLANK(leaseworks__Assigned_To__c))</errorConditionFormula>
    <errorMessage>Please select the person to whom the follow up action should be assigned in the “Assigned To” field</errorMessage>
</ValidationRule>