force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/validationRules/leaseworks__FollowUpActionBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__FollowUpActionBlank</fullName>
    <active>true</active>
    <description>validation on Follow Up Action field that 
Follow up action has to be filled in order to enter a follow up due date</description>
    <errorConditionFormula>AND(!$Setup.leaseworks__LeaseWorksSettings__c.leaseworks__Disable_All_Triggers__c, OR(!ISBLANK(leaseworks__Follow_Up_Due_Date__c),!ISBLANK( leaseworks__Assigned_To__c )),ISBLANK(  leaseworks__Follow_Up_Action__c  ))</errorConditionFormula>
    <errorDisplayField>leaseworks__Follow_Up_Action__c</errorDisplayField>
    <errorMessage>Please enter the follow up action</errorMessage>
</ValidationRule>