force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/validationRules/Require_Attendees.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Attendees</fullName>
    <active>true</active>
    <description>Requires at least 1 external attendee to be added to an IL</description>
    <errorConditionFormula>ISBLANK(leaseworks__Meeting_Attendee_1__c) &amp;&amp;
NOT(
  ISPICKVAL(leaseworks__Type_Of_Interaction__c, &quot;Earnings Call&quot;) ||
  ISPICKVAL(leaseworks__Type_Of_Interaction__c, &quot;Commercial Weekly Summary Note&quot;) ||
  ISPICKVAL(leaseworks__Type_Of_Interaction__c, &quot;Contracts/Legal Weekly Summary Note&quot;)
)</errorConditionFormula>
    <errorMessage>At least 1 external attendee should be added to this meeting type.</errorMessage>
</ValidationRule>