force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/listViews/Credit_Updates.listView-meta.xml
<ListView>
    <fullName>Credit_Updates</fullName>
    <columns>NAME</columns>
    <columns>Draft__c</columns>
    <columns>leaseworks__Related_To_Counter_Party__c</columns>
    <columns>leaseworks__Type_Of_Interaction__c</columns>
    <columns>leaseworks__Discussion_Type__c</columns>
    <columns>leaseworks__Date_Of_Call__c</columns>
    <columns>leaseworks__Summary__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Discussion_Type__c</field>
        <operation>equals</operation>
        <value>Credit Update</value>
    </filters>
    <label>Credit Updates</label>
</ListView>