force-app/main/default/objects/leaseworks__Customer_Interaction_Log__c/listViews/Weekly_Summary_Notes.listView-meta.xml
<ListView>
    <fullName>Weekly_Summary_Notes</fullName>
    <columns>NAME</columns>
    <columns>Draft__c</columns>
    <columns>leaseworks__Related_To_Marketing_Activity__c</columns>
    <columns>leaseworks__Related_To_Counter_Party__c</columns>
    <columns>leaseworks__Type_Of_Interaction__c</columns>
    <columns>leaseworks__Date_Of_Call__c</columns>
    <columns>leaseworks__Summary__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>leaseworks__Y_Hidden_IsAutoCreated__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Weekly Deals Updates</label>
</ListView>